update styling and html to ensure marks are aligned center to box

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 	text-align: center;
 }
 
+/*BOARD STYLES:*/
 .game-board {
 	width: 50%;
 	margin: 0 auto;
@@ -33,4 +34,20 @@
 
 .game-board td {
   border: 6px solid #222;
+}
+
+.cell {
+	position: relative;
+}
+
+/*BOX STYLES:*/
+.box {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 35px;
+	font-weight: bold;		
 }
